--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "express": "^4.15.4",
     "morgan": "^1.8.2",
     "pg": "^7.1.2",
+    "ramda": "^0.24.1",
     "sequelize": "^4.5.0"
   },
   "devDependencies": {
