--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.4",
+    "marked": "^0.3.6",
     "morgan": "^1.8.2",
     "pg": "^7.1.2",
     "ramda": "^0.24.1",
